c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_type_declarations/incomplete_union_member.c
/* You can't declare a union with an incomplete member type */
struct s;
union u {
    struct s bad_struct;
};

int main(void){
    return 0;
}